src/components/elementView/detailedView/rackView/rackView.scss
$row-height: 6px;
@import "~@blueprintjs/core/lib/scss/variables";

@media screen {
  .rack-container {
    padding-left: 20px;
    display: inline-block;
    overflow: scroll;
    // white-space: nowrap;
    width: 100%;
  }

  .rack-container span {
    padding-left: 20px;
    display: inline-block;
  }
}
.rack-parent {
  display: inline-block;
}
// .delete-rack {
//   position: relative;
// }

.rack {
  // outline: 10pt grey;
  border-style: solid;
  border-width: 6pt;
  border-color: #202b33;
  display: inline-block;
  margin: left 10px;
  // position: relative;
}

.rack-table {
  //background: grey;.

  // outline: 10pt white !important;
  //width: 150pt;
  float: left;
  table-layout: fixed !important;
}
.loc-table {
  padding-left: 0px !important;
}

.header {
  padding: 5px !important;
  font-size: 10px;
  background-color: grey;
}
// .table-rack{
//     border: 1pt black
//     flaot
// }

.cell {
  text-align: center !important;
  padding: 0 !important;

  margin: 0 !important;
  font-size: 2 * $row-height !important;
}

.rack-table .cell {
  max-width: 200px;
  min-width: 200px;
  // display: block;
  overflow-x: auto !important;
  position: relative !important;
  white-space: nowrap !important;
  padding-left: 0px !important;
  margin: 0px !important;
  text-shadow: 1px 1px 0 #333, -1px -1px 0 #333, 1px -1px 0 #333,
    -1px 1px 0 #333;
}
.rack-table .cell span {
  //width: 80px;
  white-space: nowrap;
  margin: 0px !important;
  float: left;
}

// .biography-text {
//   color: #fff;
//   font-weight: bold;
//   letter-spacing: 2px;
//   text-shadow: 1px 1px 0 #333,
//       -1px -1px 0 #333,
//       1px -1px 0 #333,
//       -1px 1px 0 #333,
//       2px 2px 5px rgba(0,0,0,0.65);
// }
tr {
  outline: 1px solid #202b33;
}

// .rack table {
//   border-collapse: collapse !important;
// }
.empty {
  padding-top: $row-height !important;
  padding-bottom: $row-height !important;
  // outline-color: #202b33 !important;
  // outline-width: 5pt !important;
}
.flex-grid-thirds {
  display: flex;
  justify-content: space-between;
}

// .unit {

// }
// @media (max-width: 400px) {
//   .flex-grid,
//   .flex-grid-thirds {
//     display: block;
//     .col {
//       width: 100%;
//       margin: 10px 0 10px 0;
//     }
//   }
// }

* {
  box-sizing: border-box;
}

.flex-grid {
  margin: 0 10pt 0 0;
}

@media print {
  .rack-container {
    display: block;
    overflow-x: visible;
  }
  .rack-container span ~ span {
    padding-left: 20px;
  }
  .bp3-navbar {
    display: none;
  }
  .nav-bar-button {
    display: none;
  }

  @page {
    margin: 3cm;
  }
  // .body {
  //   background-color: white !important;
  // }
  .rack-table .cell {
    max-width: none !important;
    width: fit-content !important;

    text-shadow: 1px 1px 0 #333, -1px -1px 0 #333, 1px -1px 0 #333,
      -1px 1px 0 #333 !important;

    -webkit-filter: drop-shadow(1px 1px 0 black) drop-shadow(-1px -1px 0 #333)
      drop-shadow(1px -1px 0 #333) drop-shadow(-1px 1px 0 #333) !important;
  }

  .rack-row {
    -webkit-print-color-adjust: exact !important;
    color-adjust: exact !important;
  }
  .header,
  .unit {
    color: black !important;
  }

  .rack-view-select {
    display: none;
  }

  .delete-rack {
    display: none;
  }
}

